--- a/reactchess/chess.html
+++ b/reactchess/chess.html
@@ -33,6 +33,34 @@
       margin-bottom: 15px;
       text-align: center;
     }
+
+    button {
+      padding: 10px 20px;
+      margin: 10px;
+      border: none;
+      background-color: #4CAF50;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    .button-container {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    .board-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+    }
+
   </style>
 </head>
 <body>
@@ -71,6 +99,19 @@
       const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
 
+      // Start the game
+      function startGame() {
+        setGame(initialGameState);
+        setIsWhiteTurn(true);
+        setGameOver(false);
+        setSelectedSquare(null);
+      }
+
+      // Restart the game
+      function restartGame() {
+        startGame(); // Use the startGame function to reset the game
+      }
+
       // Handle square click for moving pieces
       function handleClick(row, col) {
         if (gameOver) return;
@@ -84,8 +125,8 @@
 
           // Ensure the player can only move their pieces
           if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
-            // Move the piece if it's a valid move
-            if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
+            // Check if the move is valid for the selected piece
+            if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col)) {
               const newGame = game.map(row => row.slice());
 
               // If the king is captured, end the game
@@ -119,16 +160,68 @@
         return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
       }
 
-      // Check if a piece belongs to the opponent
-      function isOpponentPiece(piece, target) {
-        return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
-               (piece.toLowerCase() === piece && target.toUpperCase() === target);
+      // Validate the move according to the piece type
+      function isValidMove(piece, startRow, startCol, targetRow, targetCol) {
+        const rowDiff = targetRow - startRow;
+        const colDiff = targetCol - startCol;
+
+        switch (piece.toLowerCase()) {
+          case 'p':
+            // Pawns: can only move forward and capture diagonally
+            if (piece === 'P') {
+              return (colDiff === 0 && rowDiff === -1 && game[targetRow][targetCol] === '') || // Move forward
+                     (Math.abs(colDiff) === 1 && rowDiff === -1 && game[targetRow][targetCol] && game[targetRow][targetCol].toLowerCase() === 'p'); // Capture
+            } else {
+              return (colDiff === 0 && rowDiff === 1 && game[targetRow][targetCol] === '') || // Move forward
+                     (Math.abs(colDiff) === 1 && rowDiff === 1 && game[targetRow][targetCol] && game[targetRow][targetCol].toUpperCase() === 'P'); // Capture
+            }
+          case 'r':
+            // Rooks: can move horizontally or vertically
+            return (colDiff === 0 || rowDiff === 0) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
+          case 'n':
+            // Knights: can move in an L-shape
+            return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(colDiff) === 2 && Math.abs(rowDiff) === 1);
+          case 'b':
+            // Bishops: can move diagonally
+            return Math.abs(rowDiff) === Math.abs(colDiff) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
+          case 'q':
+            // Queens: can move like both a rook and a bishop
+            return ((colDiff === 0 || rowDiff === 0) || (Math.abs(rowDiff) === Math.abs(colDiff))) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
+          case 'k':
+            // Kings: can move one square in any direction
+            return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
+          default:
+            return false; // Invalid piece
+        }
+      }
+
+      // Check if the path is blocked for rooks, bishops, and queens
+      function isPathBlocked(startRow, startCol, targetRow, targetCol) {
+        const rowStep = targetRow > startRow ? 1 : (targetRow < startRow ? -1 : 0);
+        const colStep = targetCol > startCol ? 1 : (targetCol < startCol ? -1 : 0);
+        let row = startRow + rowStep;
+        let col = startCol + colStep;
+
+        while (row !== targetRow || col !== targetCol) {
+          if (game[row][col] !== '') {
+            return true; // Path is blocked by another piece
+          }
+          row += rowStep;
+          col += colStep;
+        }
+        return false; // Path is clear
       }
 
       return (
         <div>
           <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
-          <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          <div className="button-container">
+            <button onClick={startGame}>Start Game</button>
+            <button onClick={restartGame} disabled={!gameOver}>Restart Game</button>
+          </div>
+          <div className="board-container">
+            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          </div>
           {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
         </div>
       );
