--- a/reactchess/practice2.html
+++ b/reactchess/practice2.html
@@ -1,281 +1,76 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with Alternating Turns</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-  <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(45deg, #283048, #859398);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
+    let row = startRow + rowStep;
+    let col = startCol + colStep;
 
-    #root {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
-    }
-
-    .turn-info {
-      color: white;
-      font-size: 18px;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    button {
-      padding: 10px 20px;
-      margin: 10px;
-      border: none;
-      background-color: #4CAF50;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-
-    .button-container {
-      text-align: center;
-      margin-top: 10px;
-    }
-
-    .board-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 20px;
-    }
-
-  </style>
-</head>
-<body>
-  <div id="root"></div>
-
-  <script type="text/babel" data-presets="react,stage-3">
-    const initialGameState = [
-      ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-      ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-      ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-    ];
-
-    const pieceImages = {
-      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
-      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-    };
-
-    function Game() {
-      const [game, setGame] = React.useState(initialGameState);
-      const [selectedSquare, setSelectedSquare] = React.useState(null);
-      const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
-      const [gameOver, setGameOver] = React.useState(false);
-
-      // Start the game
-      function startGame() {
-        setGame(initialGameState);
-        setIsWhiteTurn(true);
-        setGameOver(false);
-        setSelectedSquare(null);
+    while (row !== targetRow || col !== targetCol) {
+      if (game[row][col] !== '') {
+        return true; // Path is blocked
       }
-
-      // Restart the game
-      function restartGame() {
-        startGame(); // Use the startGame function to reset the game
-      }
-
-      // Handle square click for moving pieces
-      function handleClick(row, col) {
-        if (gameOver) return;
-
-        const currentPlayer = isWhiteTurn ? 'White' : 'Black';
-
-        if (selectedSquare) {
-          const [selectedRow, selectedCol] = selectedSquare;
-          const selectedPiece = game[selectedRow][selectedCol];
-          const targetPiece = game[row][col];
-
-          // Ensure the player can only move their pieces
-          if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
-            // Check if the move is valid for the selected piece
-            if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col)) {
-              const newGame = game.map(row => row.slice());
-
-              // If the king is captured, end the game
-              if (targetPiece.toLowerCase() === 'k') {
-                setGameOver(true);
-                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
-              }
-
-              newGame[row][col] = selectedPiece;
-              newGame[selectedRow][selectedCol] = '';
-
-              setGame(newGame);
-              setSelectedSquare(null);
-              setIsWhiteTurn(!isWhiteTurn);  // Alternate the turn after a move
-            } else {
-              setSelectedSquare(null);
-            }
-          } else {
-            setSelectedSquare(null);
-          }
-        } else {
-          // Select the square if it's the player's piece
-          if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
-            setSelectedSquare([row, col]);
-          }
-        }
-      }
-
-      // Check if a piece belongs to the current player
-      function isPlayerPiece(piece, isWhiteTurn) {
-        return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
-      }
-
-      // Validate the move according to the piece type
-      function isValidMove(piece, startRow, startCol, targetRow, targetCol) {
-        const rowDiff = targetRow - startRow;
-        const colDiff = targetCol - startCol;
-
-        switch (piece.toLowerCase()) {
-          case 'p':
-            // Pawns: can only move forward and capture diagonally
-            if (piece === 'P') {
-              return (colDiff === 0 && rowDiff === -1 && game[targetRow][targetCol] === '') || // Move forward
-                     (Math.abs(colDiff) === 1 && rowDiff === -1 && game[targetRow][targetCol] && game[targetRow][targetCol].toLowerCase() === 'p'); // Capture
-            } else {
-              return (colDiff === 0 && rowDiff === 1 && game[targetRow][targetCol] === '') || // Move forward
-                     (Math.abs(colDiff) === 1 && rowDiff === 1 && game[targetRow][targetCol] && game[targetRow][targetCol].toUpperCase() === 'P'); // Capture
-            }
-          case 'r':
-            // Rooks: can move horizontally or vertically
-            return (colDiff === 0 || rowDiff === 0) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
-          case 'n':
-            // Knights: can move in an L-shape
-            return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(colDiff) === 2 && Math.abs(rowDiff) === 1);
-          case 'b':
-            // Bishops: can move diagonally
-            return Math.abs(rowDiff) === Math.abs(colDiff) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
-          case 'q':
-            // Queens: can move like both a rook and a bishop
-            return ((colDiff === 0 || rowDiff === 0) || (Math.abs(rowDiff) === Math.abs(colDiff))) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
-          case 'k':
-            // Kings: can move one square in any direction
-            return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
-          default:
-            return false; // Invalid piece
-        }
-      }
-
-      // Check if the path is blocked for rooks, bishops, and queens
-      function isPathBlocked(startRow, startCol, targetRow, targetCol) {
-        const rowStep = targetRow > startRow ? 1 : (targetRow < startRow ? -1 : 0);
-        const colStep = targetCol > startCol ? 1 : (targetCol < startCol ? -1 : 0);
-        let row = startRow + rowStep;
-        let col = startCol + colStep;
-
-        while (row !== targetRow || col !== targetCol) {
-          if (game[row][col] !== '') {
-            return true; // Path is blocked by another piece
-          }
-          row += rowStep;
-          col += colStep;
-        }
-        return false; // Path is clear
-      }
-
-      return (
-        <div>
-          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
-          <div className="button-container">
-            <button onClick={startGame}>Start Game</button>
-            <button onClick={restartGame} disabled={!gameOver}>Restart Game</button>
-          </div>
-          <div className="board-container">
-            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
-          </div>
-          {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
-        </div>
-      );
+      row += rowStep;
+      col += colStep;
     }
+    return false; // Path is clear
+  }
 
-    // View: Board and buttons reflecting the game state
-    function Board({ game, onSquareClick, selectedSquare }) {
-      return (
-        <div>
-          {game.map((row, rowIndex) => (
-            <div key={rowIndex} style={{ display: 'flex' }}>
-              {row.map((value, colIndex) => (
-                <Square
-                  key={colIndex}
-                  value={value}
-                  onClick={() => onSquareClick(rowIndex, colIndex)}
-                  isLight={(rowIndex + colIndex) % 2 === 0}
-                  isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-                />
-              ))}
-            </div>
+  return (
+    <div>
+      <div className="button-container">
+        <button onClick={startRestartGame}>{gameOver ? "Restart Game" : "Start Game"}</button>
+      </div>
+      <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
+      <div className="board-container">
+        <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+      </div>
+      {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
+    </div>
+  );
+}
+
+// View: Board and buttons reflecting the game state
+function Board({ game, onSquareClick, selectedSquare }) {
+  return (
+    <div>
+      {game.map((row, rowIndex) => (
+        <div key={rowIndex} style={{ display: 'flex' }}>
+          {row.map((value, colIndex) => (
+            <Square
+              key={colIndex}
+              value={value}
+              onClick={() => onSquareClick(rowIndex, colIndex)}
+              isLight={(rowIndex + colIndex) % 2 === 0}
+              isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+            />
           ))}
         </div>
-      );
+      ))}
+    </div>
+  );
+}
+
+function Square({ value, onClick, isLight, isSelected }) {
+  const squareStyle = {
+    width: '80px',
+    height: '80px',
+    display: 'flex',
+    justifyContent: 'center',
+    alignItems: 'center',
+    cursor: 'pointer',
+    backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
+    border: '1px solid #999'
+  };
+
+  const pieceDisplay = () => {
+    if (value) {
+      return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
     }
+    return null;
+  };
 
-    function Square({ value, onClick, isLight, isSelected }) {
-      const squareStyle = {
-        width: '80px',
-        height: '80px',
-        display: 'flex',
-        justifyContent: 'center',
-        alignItems: 'center',
-        cursor: 'pointer',
-        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
-        border: '1px solid #999'
-      };
+  return (
+    <button style={squareStyle} onClick={onClick}>
+      {pieceDisplay()}
+    </button>
+  );
+}
 
-      const pieceDisplay = () => {
-        if (value) {
-          return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
-        }
-        return null;
-      };
-
-      return (
-        <button style={squareStyle} onClick={onClick}>
-          {pieceDisplay()}
-        </button>
-      );
-    }
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(<Game />);
-  </script>
-</body>
-</html>
+const root = ReactDOM.createRoot(document.getElementById("root"));
+root.render(<Game />);
