--- a/reactchess/practice2.html
+++ b/reactchess/practice2.html
@@ -1,3 +1,210 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chess Game with Alternating Turns</title>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(45deg, #283048, #859398);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+    }
+
+    #root {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
+    }
+
+    .turn-info {
+      color: white;
+      font-size: 18px;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+    
+    .button-container {
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    .board-container {
+      display: flex;
+      justify-content: center;
+    }
+  </style>
+</head>
+<body>
+  <div id="root"></div>
+
+  <script type="text/babel" data-presets="react,stage-3">
+    const initialGameState = [
+      ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
+      ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
+      ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
+    ];
+
+    const pieceImages = {
+      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
+      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
+      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
+      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
+      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
+      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
+      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
+      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
+      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
+      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
+      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
+      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
+    };
+
+    function Game() {
+      const [game, setGame] = React.useState(initialGameState);
+      const [selectedSquare, setSelectedSquare] = React.useState(null);
+      const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
+      const [gameOver, setGameOver] = React.useState(false);
+
+      // Start or restart the game
+      function startRestartGame() {
+        setGame(initialGameState);
+        setSelectedSquare(null);
+        setIsWhiteTurn(true);
+        setGameOver(false);
+      }
+
+      // Handle square click for moving pieces
+      function handleClick(row, col) {
+        if (gameOver) return;
+
+        const currentPlayer = isWhiteTurn ? 'White' : 'Black';
+
+        if (selectedSquare) {
+          const [selectedRow, selectedCol] = selectedSquare;
+          const selectedPiece = game[selectedRow][selectedCol];
+          const targetPiece = game[row][col];
+
+          // Ensure the player can only move their pieces
+          if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
+            // Move the piece if it's a valid move
+            if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
+              const newGame = game.map(row => row.slice());
+
+              // If the king is captured, end the game
+              if (targetPiece.toLowerCase() === 'k') {
+                setGameOver(true);
+                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
+              }
+
+              if (isValidMove(selectedPiece, selectedRow, selectedCol, row, col, newGame)) {
+                newGame[row][col] = selectedPiece;
+                newGame[selectedRow][selectedCol] = '';
+                setGame(newGame);
+                setSelectedSquare(null);
+                setIsWhiteTurn(!isWhiteTurn);  // Alternate the turn after a move
+              } else {
+                setSelectedSquare(null);
+              }
+            } else {
+              setSelectedSquare(null);
+            }
+          } else {
+            setSelectedSquare(null);
+          }
+        } else {
+          // Select the square if it's the player's piece
+          if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
+            setSelectedSquare([row, col]);
+          }
+        }
+      }
+
+      // Check if a piece belongs to the current player
+      function isPlayerPiece(piece, isWhiteTurn) {
+        return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
+      }
+
+      // Check if a piece belongs to the opponent
+      function isOpponentPiece(piece, target) {
+        return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
+               (piece.toLowerCase() === piece && target.toUpperCase() === target);
+      }
+
+      // Validate the move based on the piece type
+      function isValidMove(piece, startRow, startCol, targetRow, targetCol, newGame) {
+        const rowDiff = targetRow - startRow;
+        const colDiff = targetCol - startCol;
+
+        switch (piece.toLowerCase()) {
+          case 'p':
+            // Pawn movement logic
+            const direction = isWhiteTurn ? -1 : 1;
+            const startRowForPawn = isWhiteTurn ? 6 : 1; // Start row for white and black
+            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') {
+              return true; // Move forward
+            }
+            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[targetRow][targetCol] === '' && newGame[startRow + direction][startCol] === '') {
+              return true; // Double move
+            }
+            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '') {
+              return true; // Capture
+            }
+            return false;
+
+          case 'r':
+            // Rook movement logic
+            if (colDiff === 0 || rowDiff === 0) {
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            }
+            return false;
+
+          case 'n':
+            // Knight movement logic
+            return (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1) || (Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2);
+
+          case 'b':
+            // Bishop movement logic
+            if (Math.abs(rowDiff) === Math.abs(colDiff)) {
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            }
+            return false;
+
+          case 'q':
+            // Queen movement logic
+            if (Math.abs(rowDiff) === Math.abs(colDiff) || colDiff === 0 || rowDiff === 0) {
+              return !isPathBlocked(startRow, startCol, targetRow, targetCol);
+            }
+            return false;
+
+          case 'k':
+            // King movement logic
+            return Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1;
+
+          default:
+            return false; // Invalid piece
+        }
+      }
+
+      // Check if the path is blocked for rooks, bishops, and queens
+      function isPathBlocked(startRow, startCol, targetRow, targetCol) {
+        const rowStep = targetRow > startRow ? 1 :
+
     let row = startRow + rowStep;
     let col = startCol + colStep;
 
