--- a/reactchess/practice2.html
+++ b/reactchess/practice2.html
@@ -203,81 +203,85 @@
 
       // Check if the path is blocked for rooks, bishops, and queens
       function isPathBlocked(startRow, startCol, targetRow, targetCol) {
-        const rowStep = targetRow > startRow ? 1 :
+        const rowStep = targetRow > startRow ? 1 : targetRow < startRow ? -1 : 0;
+        const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
 
-    let row = startRow + rowStep;
-    let col = startCol + colStep;
+        let row = startRow + rowStep;
+        let col = startCol + colStep;
 
-    while (row !== targetRow || col !== targetCol) {
-      if (game[row][col] !== '') {
-        return true; // Path is blocked
+        while (row !== targetRow || col !== targetCol) {
+          if (game[row][col] !== '') {
+            return true; // Path is blocked
+          }
+          row += rowStep;
+          col += colStep;
+        }
+        return false; // Path is clear
       }
-      row += rowStep;
-      col += colStep;
+
+      return (
+        <div>
+          <div className="button-container">
+            <button onClick={startRestartGame}>{gameOver ? "Start Game" : "Start/Restart Game"}</button>
+          </div>
+          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
+          <div className="board-container">
+            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          </div>
+          {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
+        </div>
+      );
     }
-    return false; // Path is clear
-  }
 
-  return (
-    <div>
-      <div className="button-container">
-        <button onClick={startRestartGame}>{gameOver ? "Restart Game" : "Start Game"}</button>
-      </div>
-      <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
-      <div className="board-container">
-        <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
-      </div>
-      {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
-    </div>
-  );
-}
-
-// View: Board and buttons reflecting the game state
-function Board({ game, onSquareClick, selectedSquare }) {
-  return (
-    <div>
-      {game.map((row, rowIndex) => (
-        <div key={rowIndex} style={{ display: 'flex' }}>
-          {row.map((value, colIndex) => (
-            <Square
-              key={colIndex}
-              value={value}
-              onClick={() => onSquareClick(rowIndex, colIndex)}
-              isLight={(rowIndex + colIndex) % 2 === 0}
-              isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-            />
+    // View: Board and buttons reflecting the game state
+    function Board({ game, onSquareClick, selectedSquare }) {
+      return (
+        <div>
+          {game.map((row, rowIndex) => (
+            <div key={rowIndex} style={{ display: 'flex' }}>
+              {row.map((value, colIndex) => (
+                <Square
+                  key={colIndex}
+                  value={value}
+                  onClick={() => onSquareClick(rowIndex, colIndex)}
+                  isLight={(rowIndex + colIndex) % 2 === 0}
+                  isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+                />
+              ))}
+            </div>
           ))}
         </div>
-      ))}
-    </div>
-  );
-}
-
-function Square({ value, onClick, isLight, isSelected }) {
-  const squareStyle = {
-    width: '80px',
-    height: '80px',
-    display: 'flex',
-    justifyContent: 'center',
-    alignItems: 'center',
-    cursor: 'pointer',
-    backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
-    border: '1px solid #999'
-  };
-
-  const pieceDisplay = () => {
-    if (value) {
-      return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
+      );
     }
-    return null;
-  };
 
-  return (
-    <button style={squareStyle} onClick={onClick}>
-      {pieceDisplay()}
-    </button>
-  );
-}
+    function Square({ value, onClick, isLight, isSelected }) {
+      const squareStyle = {
+        width: '80px',
+        height: '80px',
+        display: 'flex',
+        justifyContent: 'center',
+        alignItems: 'center',
+        cursor: 'pointer',
+        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
+        border: '1px solid #999'
+      };
 
-const root = ReactDOM.createRoot(document.getElementById("root"));
-root.render(<Game />);
+      const pieceDisplay = () => {
+        if (value) {
+          return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
+        }
+        return null;
+      };
+
+      return (
+        <button style={squareStyle} onClick={onClick}>
+          {pieceDisplay()}
+        </button>
+      );
+    }
+
+    const root = ReactDOM.createRoot(document.getElementById("root"));
+    root.render(<Game />);
+  </script>
+</body>
+</html>
