--- a/basichtml/example1.html
+++ b/basichtml/example1.html
@@ -1,3 +1,4 @@
+<p id="demo"></p>
 <table>
 <tr>
   <td> 1 </td>
@@ -23,3 +24,9 @@
   
 </tr>
 </table>
+
+
+<script>
+
+  document.getElementById("demo").innerHTML = "Hello World!";
+</script>
